Update links from Bugzilla to Phabricator
Bug: T112785
Change-Id: I9e877e2e4ea2d5c57587ccf14c92885d1ef64686

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -44,8 +44,8 @@
 	"translate-svg-new-label": "Label for a dropdown list of languages.\n{{Identical|Language}}",
 	"translate-svg-new-error-import": "Text for a paragraph that appears whenever a certain type of error occurs.\n\nSee also:\n* {{msg-mw|Translate-svg-new-error-group}}",
 	"translate-svg-new-error-group": "Text for a paragraph that appears whenever a certain type of error occurs.\n\nSee also:\n* {{msg-mw|Translate-svg-new-error-import}}",
-	"translate-svg-export-unsupported": "Text for a paragraph that appears whenever a certain type of error occurs. $1 is a link, with link text \"bugzilla.wikimedia.org\".",
-	"translate-svg-export-error": "Text for a paragraph that appears whenever a certain type of error occurs. $1 is a link, with link text \"bugzilla.wikimedia.org\".",
+	"translate-svg-export-unsupported": "Text for a paragraph that appears whenever a certain type of error occurs. $1 is a link, with link text \"phabricator.wikimedia.org\".",
+	"translate-svg-export-error": "Text for a paragraph that appears whenever a certain type of error occurs. $1 is a link, with link text \"phabricator.wikimedia.org\".",
 	"translate-js-properties-legend": "The legend for a fieldset which contains property controls.\n{{Identical|Property}}",
 	"translate-js-label-x": "Label for textbox which sets the horizontal position of a string",
 	"translate-js-label-y": "Label for a textbox which sets the vertical position of a string",
