Change spelling from British English to American English (whilst->while)
https://translatewiki.net/wiki/Thread:Support/British_English_in_Mediawiki_messages
Task done as part of GCI2015.
Change-Id: I7525dd86797bfcc19bd4d2ab498561bdb0a8ab2f

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -36,7 +36,7 @@
 	"translate-svg-new-title": "SVG translation",
 	"translate-svg-new-summary": "To begin translation of this file, please select the language you are translating this file '''from''' (if ambiguous, select the most widely spoken language).",
 	"translate-svg-new-label": "Language:",
-	"translate-svg-new-error-import": "'''An error occurred:''' An unknown error occurred whilst trying to create the pages required for translating this SVG.",
+	"translate-svg-new-error-import": "'''An error occurred:''' An unknown error occurred while trying to create the pages required for translating this SVG.",
 	"translate-svg-new-error-group": "'''An error occurred:''' An unknown error occurred; perhaps you forgot to specify a group in the URL?",
 	"translate-svg-export-unsupported": "Exporting back to an SVG is not supported for this message group. If it is not obvious why this has occurred, you may wish to file a bug about this at $1.",
 	"translate-svg-export-error": "An unexpected error occurred trying to save your changes back to the file. You may wish to file a bug about this at $1.",
