--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -56,5 +56,7 @@
 	"translate-js-label-bold": "Label for a checkbox governing the formatting of a string.\n{{Identical|Bold}}",
 	"translate-js-label-italic": "Label for a checkbox governing the formatting of a string.\n{{Identical|Italic}}",
 	"translate-js-label-underline": "Label for a checkbox governing the formatting of a string.\n{{Identical|Underline}}",
-	"translate-js-font-family-inherit": "Label used to imply that no specific typeface will be set for a string; instead, it will be inherited from the document default."
+	"translate-js-font-family-inherit": "Label used to imply that no specific typeface will be set for a string; instead, it will be inherited from the document default.",
+	"apihelp-query+messagegroups-param-inprogress": "{{doc-apihelp-param|query+messagegroups|inprogress}}",
+	"apihelp-query+messagegroups-param-language": "{{doc-apihelp-param|query+messagegroups|language}}"
 }
